--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
-body {
+html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0px;
 }
 
 nav ul li ul{
@@ -19,27 +19,9 @@ nav ul li ul{
 
 }
 
-.btn-container{
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 1em;
-  grid-template-rows: 110px 110px 110px;
-  padding: 2px;
-  background-color: rgba(0,0,0,0.87);
-}
-
-.btn-container div{
-  margin: auto;
-  padding: 2px;
-  display:grid;
-}
-
-.btn-container div button{
-  margin:auto;
-  font-size: 24px;
-  background-color: #ee6e73;
-  display: grid;
-  padding: 40px;
-  width: 300px;
+.sound-list{
+  display: flex;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
