--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-html, body {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  height: 100%;
+  height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,16 +12,52 @@ html, body {
   margin: 0px;
 }
 
-nav ul li ul{
-  
-  display: inline-block;
-  position: absolute;
-
-}
-
 .sound-list{
   display: flex;
   width: 75%;
+  flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
+  border: 1px solid;
+}
+
+.btn-container{
+  position: relative;
+  width: 20%;
+  height: 200px;
+  background-color: black;
+}
+
+.btn-container:nth-of-type(even){
+  background-color: rgb(3, 252, 157);
+}
+
+button{
+  border: none;
+  background-color: inherit;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  font-size: 1em;
+
+}
+
+button:focus{
+  outline: none;
+}
+
+@media only screen and (max-width: 600px) {
+  /* .sound-list{
+    justify-content: center;
+  } */
+
+  .btn-container{
+    width: 100%;
+  }
 }
