--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,15 @@ p{
 text-align: center;
 }
 
+h1{
+  text-align: center;
+}
+
+h3{
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 ul{
   margin-top: 50px;
   margin-bottom: 50px;
@@ -81,20 +90,21 @@ button{
   width: 100%;
   cursor: pointer;
   font-size: 1em;
-
-}
-
-h1{
-  text-align: center;
-}
-
-h3{
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 button:focus{
   outline: none;
+}
+
+.bg-image{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
 }
 
 @media only screen and (max-width: 600px) {
