--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body {
   padding-bottom: 40px;
 }
 
+a{
+  text-decoration: none;
+}
+
 .App > h1{
   color: white;
   text-align: center;
@@ -28,13 +32,8 @@ body {
   padding-top: 32px;
 }
 
-
 nav{
   margin-top: 32px;
-}
-
-a{
-  text-decoration: none;
 }
 
 .links{
@@ -59,26 +58,144 @@ a{
   font-size: 3rem;
 }
 
-@media only screen and (max-width: 600px) {
-  .btn-container{
-    width: 100%;
-  }
+.board{
+  width: 900px;
+  margin: 48px auto 0px auto;
+  background-image:linear-gradient(to right, rgb(127, 127, 213), rgb(134, 168, 231), rgb(145, 234, 228));
+  border-radius: 30px;
+}
 
-  .profile-link{
-    width: 50%;
+.album-cover{
+  display: flex;
+}
+
+.image{
+  width: 300px;
+  height: 300px;
+  border-top-left-radius: 30px;
+}
+
+img{
+  border-top-left-radius: 30px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.description{
+  display: flex;
+  align-items: center;
+}
+
+.description h1{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.description div{
+  margin-left: 10px;
+}
+
+.track-list{
+  padding-bottom: 70px;
+}
+
+.song{
+  height: 50px;
+  border-bottom: 2px solid #333;
+  width: 95%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.song:nth-of-type(1){
+  padding-top:32px;
+}
+
+.song div{
+  height: 35px;
+  width: 35px;
+  border: 2px solid black;
+  border-radius: 50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.song i{
+  transform: translateX(10%);
+}
+
+.song span{
+  text-transform: capitalize;
+}
+
+@media only screen and (max-width: 950px){
+  .board{
+      width: 500px;
   }
 }
 
-@media only screen and (max-width: 400px) {
-  .btn-container{
-    width: 100%;
+@media only screen and (max-width: 700px){
+  .links{
+  grid-template-columns: repeat(5, 75px);
+  grid-auto-rows: 75px;
   }
 
-  .profile-link{
-    width: 50%;
+  .size{
+      font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  .links{
+  grid-template-columns: repeat(2, 75px);
+  grid-auto-rows: 75px;
   }
 
-  h1{
-    font-size: 1.5em;
+  .size{
+      font-size: 1.5rem;
+  }
+
+  .board{
+      width: 95%;
+  }
+  
+  .album-cover{
+      display: block;
+  }
+
+  .image{
+      padding-top: 32px;
+      margin: auto;
+  }
+
+  img{
+      border-radius: 0px;
+  }
+
+  .description{
+      justify-content: center;
+  }
+
+  .description span{
+      display: none;
+  }
+
+  .description h1{
+      margin: 32px 0px 32px 0px;
+  }
+
+  .description p{
+      text-align: center;
+  }
+}
+
+@media only screen and (max-width: 400px){
+  .image{
+      height: 150px;
+      width: 150px;
   }
 }
